--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<dep.version.jackson>2.8.7</dep.version.jackson>
 		<dep.version.slf4j>1.7.25</dep.version.slf4j>
 		<dep.version.logback>1.2.2</dep.version.logback>
-		<dep.version.richtextfx>0.7-M4</dep.version.richtextfx>
+		<dep.version.richtextfx>0.9.1</dep.version.richtextfx>
 		<dep.version.saxon>9.7.0-15</dep.version.saxon>
 		<dep.version.jcabi>0.18.1</dep.version.jcabi>
 	</properties>
