--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.roda</groupId>
@@ -14,13 +14,13 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<misc.version.java>1.8</misc.version.java>
+		<misc.version.java>11</misc.version.java>
 		<projectLocalRepository>${project.basedir}/repository</projectLocalRepository>
 		<!-- plugins versions -->
-		<plug.version.launch4j>1.7.17</plug.version.launch4j>
+		<plug.version.launch4j>2.1.1</plug.version.launch4j>
 		<plug.version.git-commit>2.2.2</plug.version.git-commit>
 		<plug.version.surefire>2.19.1</plug.version.surefire>
-		<plug.version.compiler>3.6.1</plug.version.compiler>
+		<plug.version.compiler>3.8.0</plug.version.compiler>
 		<plug.version.assembly>3.0.0</plug.version.assembly>
 		<plug.version.clean>3.0.0</plug.version.clean>
 		<plug.version.deploy>2.8.2</plug.version.deploy>
@@ -34,7 +34,7 @@
 		<dep.version.jackson>2.9.9</dep.version.jackson>
 		<dep.version.slf4j>1.7.25</dep.version.slf4j>
 		<dep.version.logback>1.2.2</dep.version.logback>
-		<dep.version.richtextfx>0.9.1</dep.version.richtextfx>
+		<dep.version.richtextfx>0.9.3</dep.version.richtextfx>
 		<dep.version.saxon>9.7.0-15</dep.version.saxon>
 		<dep.version.jcabi>0.18.1</dep.version.jcabi>
 	</properties>
@@ -172,7 +172,7 @@
 							</classPath>
 							<icon>src/main/resources/roda2-logo.ico</icon>
 							<jre>
-								<minVersion>1.8.0</minVersion>
+								<minVersion>11</minVersion>
 							</jre>
 							<versionInfo>
 								<fileVersion>1.0.0.0</fileVersion>
@@ -221,7 +221,7 @@
 					<!-- this is false by default, forces the plugin to generate the file -->
 					<generateGitPropertiesFile>true</generateGitPropertiesFile>
 
-					<!-- The path for the properties file to be generated. See Super Pom 
+					<!-- The path for the properties file to be generated. See Super Pom
 						for default variable reference https://maven.apache.org/guides/introduction/introduction-to-the-pom.html -->
 					<generateGitPropertiesFilename>
 						${project.basedir}/src/main/resources/build.properties
@@ -288,11 +288,28 @@
 			<artifactId>logback-core</artifactId>
 			<version>${dep.version.logback}</version>
 		</dependency>
+		<!-- Commons-IP -->
 		<dependency>
 			<groupId>org.roda-project</groupId>
 			<artifactId>commons-ip2</artifactId>
 			<version>${dep.version.commons-ip2}</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0-b170201.1204</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.3.0-b170127.1453</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.github.jknack</groupId>
 			<artifactId>handlebars</artifactId>
@@ -309,11 +326,6 @@
 			<version>1.10</version>
 		</dependency>
 		<dependency>
-			<groupId>org.controlsfx</groupId>
-			<artifactId>controlsfx</artifactId>
-			<version>8.40.12</version>
-		</dependency>
-		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20160810</version>
@@ -328,6 +340,53 @@
 			<artifactId>xmlunit</artifactId>
 			<version>1.6</version>
 		</dependency>
+
+		<!-- JavaFX -->
+		<dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx</artifactId>
+			<version>11.1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>11</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-swing</artifactId>
+			<version>11</version>
+		</dependency>
+
+
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-media</artifactId>
+			<version>11</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-graphics</artifactId>
+			<version>11</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-web</artifactId>
+			<version>11</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-fxml</artifactId>
+			<version>11</version>
+		</dependency>
+
 		<!-- Tests -->
 		<dependency>
 			<groupId>junit</groupId>
