--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
 		<dep.version.commons-ip2>2.0.0-alpha1</dep.version.commons-ip2>
 		<dep.version.sf-test>4.0.6-alpha</dep.version.sf-test>
 		<dep.version.jackson>2.9.9</dep.version.jackson>
-		<dep.version.slf4j>1.7.25</dep.version.slf4j>
-		<dep.version.logback>1.2.2</dep.version.logback>
+		<dep.version.slf4j>2.0.0-alpha1</dep.version.slf4j>
+		<dep.version.logback>1.3.0-alpha5</dep.version.logback>
 		<dep.version.richtextfx>0.9.3</dep.version.richtextfx>
 		<dep.version.saxon>9.7.0-15</dep.version.saxon>
 		<dep.version.jcabi>0.18.1</dep.version.jcabi>
@@ -151,11 +151,54 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<groupId>io.github.fvarrui</groupId>
+				<artifactId>javapackager</artifactId>
+				<version>1.5.1</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>package</goal>
+						</goals>
+						<configuration>
+							<!-- mandatory -->
+							<mainClass>org.roda.rodain.Main</mainClass>
+							<!-- optional -->
+							<name>rodain-app-${jar.id}${project.version}_Windows</name>
+							<bundleJre>true</bundleJre>
+							<generateInstaller>true</generateInstaller>
+							<platform>windows</platform>
+							<createZipball>true</createZipball>
+							<jdkPath>/home/jgomes/Github/OpenJDK11U-jdk_x64_windows_openj9_windowsXL_11.0.10_9_openj9-0.24.0/jdk-11.0.10+9</jdkPath>
+							<runnableJar>/home/jgomes/Github/KEEPS/roda-in/target/rodain-app-2.2.0_OtherOS.jar</runnableJar>
+							<additionalResources>
+								<additionalResource>src/main/resources</additionalResource>
+							</additionalResources>
+							<winConfig>
+								<headerType>gui</headerType>
+								<icoFile>src/main/resources/roda2-logo.ico</icoFile>
+								<generateSetup>true</generateSetup>
+								<wrapJar>true</wrapJar>
+								<fileVersion>1.0.0.0</fileVersion>
+								<txtFileVersion>1.0.0.0</txtFileVersion>
+								<fileDescription>Desc</fileDescription>
+								<copyright>C</copyright>
+								<productVersion>2.0.0.3</productVersion>
+								<txtProductVersion>2.0.0.3</txtProductVersion>
+								<productName>RODA-in</productName>
+								<internalName>RODA-in</internalName>
+								<originalFilename>rodain-app-${jar.id}${project.version}.exe</originalFilename>
+
+							</winConfig>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>com.akathist.maven.plugins.launch4j</groupId>
 				<artifactId>launch4j-maven-plugin</artifactId>
 				<version>${plug.version.launch4j}</version>
 				<executions>
-					<!-- GUI exe -->
 					<execution>
 						<id>l4j-gui</id>
 						<phase>package</phase>
@@ -172,7 +215,7 @@
 							</classPath>
 							<icon>src/main/resources/roda2-logo.ico</icon>
 							<jre>
-								<path>../jre/bin</path>
+								<path>../../jre/bin</path>
 							</jre>
 							<versionInfo>
 								<fileVersion>1.0.0.0</fileVersion>
@@ -186,28 +229,6 @@
 								<originalFilename>rodain-app-${jar.id}${project.version}.exe</originalFilename>
 							</versionInfo>
 						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>de.perdian.maven.plugins</groupId>
-				<artifactId>macosappbundler-maven-plugin</artifactId>
-				<version>1.10.2</version>
-				<configuration>
-					<plist>
-						<CFBundleName>rodain-app-${jar.id}${project.version}_MACOS</CFBundleName>
-						<JVMMainClassName>org.roda.rodain.Main</JVMMainClassName>
-					</plist>
-					<jdk>
-						<include>true</include>
-					</jdk>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>bundle</goal>
-						</goals>
 					</execution>
 				</executions>
 			</plugin>
@@ -380,27 +401,53 @@
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-swing</artifactId>
 			<version>11</version>
+			<classifier>linux</classifier>
 		</dependency>
-
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-swing</artifactId>
+			<version>11</version>
+			<classifier>win</classifier>
+		</dependency>
 
 
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-media</artifactId>
 			<version>11</version>
+			<classifier>linux</classifier>
 		</dependency>
-
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-media</artifactId>
+			<version>11</version>
+			<classifier>win</classifier>
+		</dependency>
 
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-graphics</artifactId>
 			<version>11</version>
+			<classifier>linux</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-graphics</artifactId>
+			<version>11</version>
+			<classifier>win</classifier>
 		</dependency>
 
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-web</artifactId>
 			<version>11</version>
+			<classifier>linux</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-web</artifactId>
+			<version>11</version>
+			<classifier>win</classifier>
 		</dependency>
 
 		<dependency>
